--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
 
 
-  <link rel="alternate" href="/atom.xml" title="Student" type="application/atom+xml" />
+  <link rel="alternate" href="/atom.xml" title="Gopher" type="application/atom+xml" />
 
 
 
